--- a/functions/nav.html
+++ b/functions/nav.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="style.css">
 <nav id="navbar">
     <ul>
-        <li><a href="/home/home.html" id="navbar-logo">
+        <li><a href="index.html" id="navbar-logo">
             <img src="/images/logo.svg" alt="Logo">Regency Reject
         </a></li>
         <!--TUDOR ERA NAV ITEMS-->
