--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/home/style.css">
+    <link rel="stylesheet" href="/functions/style.css">
     <title>Regency Reject - Home</title>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
 </head>
 <body>
     <div id="nav-placeholder"></div>
-    <script src="/home/nav.js"></script>
+    <script src="/functions/nav.js"></script>
 <header class="banner">
     <span class="banner-background home-bg">
     </span>
