--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="nav-placeholder"></div>
-    <script src="/functions/nav.js"></script>
+    <script src="nav.js"></script>
 <header class="banner">
     <span class="banner-background home-bg">
     </span>
