--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- The American Century -->
       <li class="cards_item">
         <div class="card">
-          <img src="/images/ac-bg.jpg" alt="American Civil Rights photo">
+          <img src="images/home-bg-2.png" alt="American Civil Rights photo">
           <div class="card_content">
             <h2 class="card_title">The American Century</h2>
             <p class="card_text">The United States from 1890-1990, the progression of civil rights, and the making of a Superpower</p>
