--- a/nav.html
+++ b/nav.html
@@ -2,7 +2,7 @@
 <nav id="navbar">
     <ul>
         <li><a href="index.html" id="navbar-logo">
-            <img src="/images/logo.svg" alt="Logo">Regency Reject
+            <img src="images/logo.svg" alt="Logo">Regency Reject
         </a></li>
         <!--TUDOR ERA NAV ITEMS-->
         <li><a href="/tudors/tudor.html">Tudor Era</a>
