--- a/nav.html
+++ b/nav.html
@@ -11,7 +11,7 @@
         <li><a href="/american-century/american-century.html">American Century</a>
         </li>
 
-        <li><a href="/germany/weimar-republic.html">Weimar Republic</a>
+        <li><a href="germany/weimar-republic.html">Weimar Republic</a>
         <ul>
             <li>
                 <a href="">Source Analysis</a>
