--- a/timeline.html
+++ b/timeline.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Germany 1918-1945 Timeline</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="style.css">
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
 </head>
