--- a/nav.html
+++ b/nav.html
@@ -17,7 +17,7 @@
                 <a href="">Source Analysis</a>
             </li>
             <li>
-                <a href="timeline.html">Timeline</a>
+                <a href="germany/timeline.html">Timeline</a>
             </li>
         </ul>
 
