--- a/nav.html
+++ b/nav.html
@@ -14,7 +14,7 @@
         <li><a href="germany/weimar-republic.html">Weimar Republic</a>
         <ul>
             <li>
-                <a href="">Source Analysis</a>
+                <a href="/germany/timeline.html">Source Analysis</a>
             </li>
             <li>
                 <a href="germany/timeline.html">Timeline</a>
