--- a/germany/timeline.html
+++ b/germany/timeline.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div id="nav-placeholder"></div>
-<script src="/nav.js"></script>
+<script src="nav.js"></script>
 
 <div class="timeline-container" id="timeline-1">
   <div class="timeline-header">
