--- a/germany/timeline.html
+++ b/germany/timeline.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <title>Germany 1918-1945 Timeline</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="/style.css">
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
 </head>
 <body>
 <div id="nav-placeholder"></div>
-<script src="nav.js"></script>
+<script src="/nav.js"></script>
 
 <div class="timeline-container" id="timeline-1">
   <div class="timeline-header">
@@ -230,7 +230,7 @@
   </div>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
-  <script  src="timeline.js"></script>
+  <script  src="/timeline.js"></script>
 
 </body>
 </html>
