--- a/nav.html
+++ b/nav.html
@@ -5,18 +5,16 @@
             <img src="images/logo.svg" alt="Logo">Regency Reject
         </a></li>
         <!--TUDOR ERA NAV ITEMS-->
-        <li><a href="/tudors/tudor.html">Tudor Era</a>
+        <li><a href="tudor.html">Tudor Era</a>
         </li>
 
-        <li><a href="/american-century/american-century.html">American Century</a>
+        <li><a href="american-century.html">American Century</a>
         </li>
 
-        <li><a href="germany/weimar-republic.html">Weimar Republic</a>
+        <li><a href="weimar-republic.html">Weimar Republic</a>
         <ul>
             <li>
-                <a href="germany/timeline.html">Source Analysis</a>
-            </li>
-            <li>
+                <a href="germany-timeline.html">Source Analysis</a>
             </li>
         </ul>
 
