--- a/american-century-background.html
+++ b/american-century-background.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/home/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>The American Century</title>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
 </head>
 <body>
     <div id="nav-placeholder"></div>
-    <script src="/home/nav.js"></script>
+    <script src="nav.js"></script>
 <div class="wrapper">  
 <header class="banner">
     <span class="banner-background ac-bg">
@@ -51,6 +51,6 @@ spread southward, moving downwards through the Carolinas, and to Georgia, eventu
 </div>
 </div>
 
-<script src="/home/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
