--- a/germany-weimar-republic.html
+++ b/germany-weimar-republic.html
@@ -3,18 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/home/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>The Weimar Republic</title>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
 </head>
 <body>
     <div id="nav-placeholder"></div>
-    <script>
-        $(function(){
-            $("#nav-placeholder").load("/home/nav.html");
-        });
-    </script>
+    <script src="nav.js"></script>
+    
 <header class="banner">
     <span class="banner-background weimar-bg">
     </span>
