--- a/american-century-timeline.html
+++ b/american-century-timeline.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <title>The American Century Timeline</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="/home/style.css">
+<link rel="stylesheet" href="style.css">
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
 </head>
 <body>
 <div id="nav-placeholder"></div>
-<script src="/home/nav.js"></script>
+<script src="nav.js"></script>
 
 <div class="timeline-container" id="timeline-1">
   <div class="timeline-header">
@@ -20,7 +20,7 @@
   <div class="timeline">
     <!-- nov 7th 1918 -->
     <div class="timeline-item" data-text="END OF WWI">
-      <div class="timeline__content"><img class="timeline__img" src="/germany/images/kiel-mutiny.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="images/germany/kiel-mutiny.jpg"/>
         <h2 class="timeline__content-title">NOV 3ʳᵈ 1918</h2>
         <p class="timeline__content-desc">Kiel mutiny sparks, beginning the German Revolution, and beginning the end of the German struggle in World War 1</p>
       </div>
@@ -28,4 +28,4 @@
 </body>
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
-    <script  src="/home/timeline.js"></script>
+    <script  src="timeline.js"></script>
