--- a/germany-timeline.html
+++ b/germany-timeline.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <title>Germany 1918-1945 Timeline</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="style.css">
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
 </head>
 <body>
 <div id="nav-placeholder"></div>
-<script src="/nav.js"></script>
+<script src="nav.js"></script>
 
 <div class="timeline-container" id="timeline-1">
   <div class="timeline-header">
@@ -20,7 +20,7 @@
   <div class="timeline">
     <!-- nov 7th 1918 -->
     <div class="timeline-item" data-text="END OF WWI">
-      <div class="timeline__content"><img class="timeline__img" src="/germany/images/kiel-mutiny.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="/images/germany/kiel-mutiny.jpg">
         <h2 class="timeline__content-title">NOV 3ʳᵈ 1918</h2>
         <p class="timeline__content-desc">Kiel mutiny sparks, beginning the German Revolution, and beginning the end of the German struggle in World War 1</p>
       </div>
@@ -28,7 +28,7 @@
 
     <!-- nov 9th 1918 -->
     <div class="timeline-item" data-text="END OF WWI">
-      <div class="timeline__content"><img class="timeline__img" src="/germany/images/wilhelm-abdicates.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="/images/germany/wilhelm-abdicates.jpg">
         <h2 class="timeline__content-title">NOV 9ᵗʰ 1918</h2>
         <p class="timeline__content-desc">Kaiser Wilhelm abdicates as ruler of the German Empire, and flees to the Netherlands</p>
       </div>
@@ -36,15 +36,15 @@
 
     <!-- nov 10th 1918 -->
     <div class="timeline-item" data-text="END OF WWI">
-      <div class="timeline__content"><img class="timeline__img" src="/germany/images/friedrich-ebert.jpg">
+      <div class="timeline__content"><img class="timeline__img" src="/images/germany/friedrich-ebert.jpg">
         <h2 class="timeline__content-title">NOV 10ᵗʰ 1918</h2>
-        <p class="timeline__content-desc">Friechrich Ebert becomes Chancellor of what would become the Weimar Republic</p>
+        <p class="timeline__content-desc">Friedrich Ebert becomes Chancellor of what would become the Weimar Republic</p>
       </div>
     </div>
 
     <!-- nov 11th 1918 -->
     <div class="timeline-item" data-text="END OF WWI">
-      <div class="timeline__content"><img class="timeline__img" src="/germany/images/armistice.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="/images/germany/armistice.jpg">
         <h2 class="timeline__content-title">NOV 11ᵗʰ 1918</h2>
         <p class="timeline__content-desc">The Armistice is signed at 11:11, marking German surrender, and the end of the First World War</p>
       </div>
@@ -52,7 +52,7 @@
 
     <!-- jan 5th 1919 -->
     <div class="timeline-item" data-text="SPARACIST REVOLT">
-      <div class="timeline__content"><img class="timeline__img" src="/germany/images/spartacist-revolt.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="/images/germany/spartacist-revolt.jpg">
         <h2 class="timeline__content-title">JAN 5ᵗʰ 1919</h2>
         <p class="timeline__content-desc">The Spartacist revolt begins, led by Karl Liebknecht, and Rosa Luxemburg</p>
       </div>
@@ -60,7 +60,7 @@
 
     <!-- jan 5th 1919 -->
     <div class="timeline-item" data-text="SPARACIST REVOLT">
-      <div class="timeline__content"><img class="timeline__img" src="/images/filler.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="">
         <h2 class="timeline__content-title">JAN 5ᵗʰ 1919</h2>
         <p class="timeline__content-desc">The Spartacist revolt begins, led by Karl Liebknecht, and Rosa Luxemburg</p>
       </div>
@@ -68,7 +68,7 @@
 
     <!-- mar 21st 1919 -->
     <div class="timeline-item" data-text="COMMUNISM">
-      <div class="timeline__content"><img class="timeline__img" src="/images/filler.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="">
         <h2 class="timeline__content-title">MAR 21ˢᵗ 1919</h2>
         <p class="timeline__content-desc">Soviet Republic is declared in Bavaria</p>
       </div>
@@ -76,7 +76,7 @@
 
     <!-- june 28th 1919 -->
     <div class="timeline-item" data-text="END OF WWI">
-      <div class="timeline__content"><img class="timeline__img" src="/images/filler.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="">
         <h2 class="timeline__content-title">JUNE 28ᵗʰ 1919</h2>
         <p class="timeline__content-desc">The Treaty of Versailles is signed, officially ending WWI, and  imposing harsh penalties on Germany</p>
       </div>
@@ -84,7 +84,7 @@
 
     <!-- june 28th 1919 -->
     <div class="timeline-item" data-text="END OF WWI">
-      <div class="timeline__content"><img class="timeline__img" src="/images/filler.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="">
         <h2 class="timeline__content-title">AUG 11ᵗʰ 1919</h2>
         <p class="timeline__content-desc">The Weimar Constitution comes into effect, officially creating the Weimar Republic</p>
       </div>
@@ -92,7 +92,7 @@
 
     <!-- feb 24th 1920 -->
     <div class="timeline-item" data-text="RISE OF THE NAZIS">
-      <div class="timeline__content"><img class="timeline__img" src="/images/filler.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="">
         <h2 class="timeline__content-title">FEB 24ᵗʰ 1920</h2>
         <p class="timeline__content-desc">The National Socialist German Workers' Party (NSDAP) is formed</p>
       </div>
@@ -100,7 +100,7 @@
 
     <!-- mar 13th 1920 -->
     <div class="timeline-item" data-text="KAPP PUTSCH">
-      <div class="timeline__content"><img class="timeline__img" src="/images/filler.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="">
         <h2 class="timeline__content-title">MAR 13ᵗʰ 1919</h2>
         <p class="timeline__content-desc">The Kapp Putsch begins, led by Wolfgang Kapp</p>
       </div>
@@ -109,7 +109,7 @@
 
     <!-- apr 1920 -->
     <div class="timeline-item" data-text="COMMUNIST RISING">
-      <div class="timeline__content"><img class="timeline__img" src="/images/filler.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="">
         <h2 class="timeline__content-title">APR 1920</h2>
         <p class="timeline__content-desc">Communist uprising occurs in the Ruhr</p>
       </div>
@@ -117,7 +117,7 @@
 
     <!-- july 1921 -->
     <div class="timeline-item" data-text="RISE OF HITLER">
-      <div class="timeline__content"><img class="timeline__img" src="/images/filler.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="">
         <h2 class="timeline__content-title">JULY 1921</h2>
         <p class="timeline__content-desc">Adolf Hitler becomes the leader of the National Socialist German Workers' Party (NSDAP)</p>
       </div>
@@ -125,7 +125,7 @@
 
     <!-- aug 21st 1921 -->
     <div class="timeline-item" data-text="RISE OF THE NAZIS">
-      <div class="timeline__content"><img class="timeline__img" src="/images/filler.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="">
         <h2 class="timeline__content-title">AUG 21ˢᵗ 1921</h2>
         <p class="timeline__content-desc">The Sturmabteilung (SA) is formed</p>
       </div>
@@ -133,7 +133,7 @@
 
     <!-- june 24th 1922 -->
     <div class="timeline-item" data-text="POLITICAL ASSASSINATIONS">
-      <div class="timeline__content"><img class="timeline__img" src="/images/filler.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="">
         <h2 class="timeline__content-title">JUNE 24ᵗʰ 1922</h2>
         <p class="timeline__content-desc">Walter Rathenau was assassinated</p>
       </div>
@@ -141,7 +141,7 @@
 
     <!-- jan 11th 1923 -->
     <div class="timeline-item" data-text="ECONOMIC CRISIS">
-      <div class="timeline__content"><img class="timeline__img" src="/images/filler.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="">
         <h2 class="timeline__content-title">JAN 11ᵗʰ 1923</h2>
         <p class="timeline__content-desc">French and Belgian troops invade the Ruhr, because Germany failed to pay reparations</p>
       </div>
@@ -149,7 +149,7 @@
 
     <!-- feb 1923 -->
     <div class="timeline-item" data-text="ECONOMIC CRISIS">
-      <div class="timeline__content"><img class="timeline__img" src="/images/filler.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="">
         <h2 class="timeline__content-title">FEB 1923</h2>
         <p class="timeline__content-desc">Passive resistance in the Ruhr begins</p>
       </div>
@@ -157,7 +157,7 @@
 
     <!-- aug 1923 -->
     <div class="timeline-item" data-text="ECONOMIC CRISIS">
-      <div class="timeline__content"><img class="timeline__img" src="/images/filler.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="">
         <h2 class="timeline__content-title">AUG 1923</h2>
         <p class="timeline__content-desc">Stresemann becomes the Chancellor of the Weimar Republic</p>
       </div>
@@ -165,7 +165,7 @@
 
     <!-- nov 1923 -->
     <div class="timeline-item" data-text="ECONOMIC CRISIS">
-      <div class="timeline__content"><img class="timeline__img" src="/images/filler.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="">
         <h2 class="timeline__content-title">NOV 1923</h2>
         <p class="timeline__content-desc">Hyperinflation reaches its peak</p>
       </div>
@@ -173,7 +173,7 @@
 
     <!-- nov 9th 1923 -->
     <div class="timeline-item" data-text="ECONOMIC CRISIS">
-      <div class="timeline__content"><img class="timeline__img" src="/images/filler.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="">
         <h2 class="timeline__content-title">NOV 9ᵗʰ 1923</h2>
         <p class="timeline__content-desc">The Munich Beer Hall Putsch, led by the Hitler and the Nazi Party, occurs failing, Hitler is arrested</p>
       </div>
@@ -181,7 +181,7 @@
 
     <!-- nov 15th 1923 -->
     <div class="timeline-item" data-text="ECONOMIC CRISIS">
-      <div class="timeline__content"><img class="timeline__img" src="/images/filler.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="">
         <h2 class="timeline__content-title">NOV 15ᵗʰ 1923</h2>
         <p class="timeline__content-desc">Rentenmark is introudced to attempt at stablising the German economy</p>
       </div>
@@ -189,7 +189,7 @@
   
     <!-- apr 1st 1924 -->
     <div class="timeline-item" data-text="RISE OF HITLER">
-      <div class="timeline__content"><img class="timeline__img" src="/images/filler.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="">
         <h2 class="timeline__content-title">APR 1ˢᵗ 1924</h2>
         <p class="timeline__content-desc">Hitler is sentenced to 5 years in prison</p>
       </div>
@@ -197,7 +197,7 @@
 
     <!-- aug 30th 1924 -->
     <div class="timeline-item" data-text="ECONOMIC CRISIS">
-      <div class="timeline__content"><img class="timeline__img" src="/images/filler.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="">
         <h2 class="timeline__content-title">AUG 30ᵗʰ 1924</h2>
         <p class="timeline__content-desc">Hyperinflation reaches its peak</p>
       </div>
@@ -205,7 +205,7 @@
 
     <!-- jan 1933 -->
     <div class="timeline-item" data-text="RISE OF HITLER">
-      <div class="timeline__content"><img class="timeline__img" src="/images/filler.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="">
         <h2 class="timeline__content-title">JAN 1933</h2>
         <p class="timeline__content-desc">Hitler becomes the Chancellor of the Weimar Republic</p>
       </div>
@@ -213,7 +213,7 @@
 
     <!-- feb 1933 -->
     <div class="timeline-item" data-text="RISE OF HITLER">
-      <div class="timeline__content"><img class="timeline__img" src="/images/filler.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="">
         <h2 class="timeline__content-title">FEB 1933</h2>
         <p class="timeline__content-desc">The Reichstag fire occurs, blamed on by Dutch Communist, Marinus van der Lubbe</p>
       </div>
@@ -221,7 +221,7 @@
 
     <!-- mar 1933 -->
     <div class="timeline-item" data-text="RISE OF HITLER">
-      <div class="timeline__content"><img class="timeline__img" src="/images/filler.jpg"/>
+      <div class="timeline__content"><img class="timeline__img" src="">
         <h2 class="timeline__content-title">MAR 1933</h2>
         <p class="timeline__content-desc">The Enabling Act is passed, </p>
       </div>
@@ -230,7 +230,7 @@
   </div>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
-  <script  src="/timeline.js"></script>
+  <script  src="timeline.js"></script>
 
 </body>
 </html>
